[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab02"
version = "0.0.1"
authors = [
{ name="Annika Richardson", email="annika.richardson@ucalgary.ca" },
]
description="Lab03 Python Package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: MIT",
]
[project.urls]
"Homepage" = "https://github.com/annika-rich/goph420-w2024-lab03-stAR"